--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,3 +1,10 @@
-<div>
-  <p>Homepage</p>
+<div class='row'>
+  <div class='col l12'>
+    <!-- Render the Blog Posts sub layout -->
+    {{#each posts as |post|}}
+          {{> post-details}}
+    {{/each}}
+  </div>
 </div>
+
+        
