--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,42 +1,69 @@
-<div class="">
-  <div class="">
+<div class='row'>
+  <div id='loginForm' class='col s12 m10 l8 offset-l2 offset-m2'>
     <h2>Login</h2>
-
-    <form class="login-form">
-      <div class="">
-        <label for="email-login">email:</label>
-        <input class="" type="text" id="email-login" />
+    <form class='login-form'>
+      <div class=''>
+        <label for='email-login'>email:</label>
+        <input class='' type='text' id='email-login' />
       </div>
-      <div class="">
-        <label for="password-login">password:</label>
-        <input class="" type="password" id="password-login" />
+      <div class=''>
+        <label for='password-login'>password:</label>
+        <input class='' type='password' id='password-login' />
       </div>
-      <div class="">
-        <button class="" type="submit">login</button>
-      </div>
-    </form>
-  </div>
-  <div class="">
-    <h2>Signup</h2>
-
-    <form class="signup-form">
-      <div class="">
-        <label for="name-signup">name:</label>
-        <input class="" type="text" id="name-signup" />
-      </div>
-      <div class="">
-        <label for="email-signup">email:</label>
-        <input class="" type="text" id="email-signup" />
-      </div>
-      <div class="">
-        <label for="password-signup">password:</label>
-        <input class="" type="password" id="password-signup" />
-      </div>
-      <div class="">
-        <button class="" type="submit">signup</button>
+      <div class=''>
+        <button
+          class='btn waves-effect waves-light right'
+          type='submit'
+          name='action'
+        >Submit<i class='material-icons right'>send</i></button>
       </div>
     </form>
   </div>
 </div>
+<div class='row'>
+  <div id='signupForm' class='col s12 m10 l8 offset-l2 offset-m2 offset-s2'>
+    <!-- Modal Trigger -->
+    <a
+      href='#'
+      class='modal-trigger waves-effect waves-teal btn-flat blue-text text-darken-2'
+      onclick='toggleModal'
+      data-target='modal1'
+    >Create an Account</a>
 
-<script src="./js/login.js"></script>
+    <!-- Modal Structure -->
+    <div id='modal1' class='modal'>
+      <div class='modal-content'>
+        <a
+          href='#!'
+          class='modal-close btn-floating btn-small waves-effect right waves-light red lighten-2 2rem'
+        ><i class='material-icons'>close</i></a>
+
+        <h4 id='info-modal-heading'>Create your blog account</h4>
+        <p id='info-modal-content'>
+          <form class='signup-form'>
+            <div class=''>
+              <label for='name-signup'>Name:</label>
+              <input class='' type='text' id='name-signup' />
+            </div>
+            <div class=''>
+              <label for='email-signup'>Email:</label>
+              <input class='' type='text' id='email-signup' />
+            </div>
+            <div class=''>
+              <label for='password-signup'>Password:</label>
+              <input class='' type='password' id='password-signup' />
+            </div>
+            <button
+              class='btn waves-effect waves-light right'
+              type='submit'
+            >signup</button>
+          </form>
+        </p>
+        <br />
+
+      </div>
+    </div>
+  </div>
+</div>
+
+<script src='./js/login.js'></script>
