Added New and Delete Post Routes and integrated User.ID into homepage

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,5 +1,8 @@
+
+{{> formPost}}
 <div class='row'>
   <div class='col l12'>
+    
     <!-- Render the Blog Posts sub layout -->
     {{#each posts as |post|}}
           {{> post-details}}
