--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -22,47 +22,7 @@
 </div>
 <div class='row'>
   <div id='signupForm' class='col s12 m10 l8 offset-l2 offset-m2 offset-s2'>
-    <!-- Modal Trigger -->
-    <a
-      href='#'
-      class='modal-trigger waves-effect waves-teal btn-flat blue-text text-darken-2'
-      onclick='toggleModal'
-      data-target='modal1'
-    >Create an Account</a>
-
-    <!-- Modal Structure -->
-    <div id='modal1' class='modal'>
-      <div class='modal-content'>
-        <a
-          href='#!'
-          class='modal-close btn-floating btn-small waves-effect right waves-light red lighten-2 2rem'
-        ><i class='material-icons'>close</i></a>
-
-        <h4 id='info-modal-heading'>Create your blog account</h4>
-        <p id='info-modal-content'>
-          <form class='signup-form'>
-            <div class=''>
-              <label for='name-signup'>Name:</label>
-              <input class='' type='text' id='name-signup' />
-            </div>
-            <div class=''>
-              <label for='email-signup'>Email:</label>
-              <input class='' type='text' id='email-signup' />
-            </div>
-            <div class=''>
-              <label for='password-signup'>Password:</label>
-              <input class='' type='password' id='password-signup' />
-            </div>
-            <button
-              class='btn waves-effect waves-light right'
-              type='submit'
-            >signup</button>
-          </form>
-        </p>
-        <br />
-
-      </div>
-    </div>
+ {{> formSignup}}
   </div>
 </div>
 
