Finished CRUD operations for comments

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,7 +32,7 @@
           id='logo-container'
           href='#'
           class='brand-logo'
-        >My Development Blog</a>
+        >My Full-Stack Dev Blog</a>
         <ul class='right hide-on-med-and-down'>
           <li><a href='/'>Homepage</a></li>
           <!-- Conditionally render login or logout links -->
@@ -71,7 +71,7 @@
           <h5 class='header col s12 light'>A reflection of my journey to
             full-stack develpment</h5>
         </div>
-        {{#if logged_in}}{{/if}}
+
         <br /><br />
 
       </div>
