--- a/public/css/style.css
+++ b/public/css/style.css
@@ -80,9 +80,10 @@ input {
 }
 
 .card {
-    min-height: 400px;
+    height: 500px;
 }
 
 .post-content {
-    min-height: 150px;
+    height: 150px;
+
 }
