--- a/views/partials/formComment.handlebars
+++ b/views/partials/formComment.handlebars
@@ -1,26 +1,10 @@
-<div class='collapsible-body'>
-  <div class="row mt-4">
-    <div class="col-md-2">
-
-      <form class="form new-item-form white-text">
-        <div class="form-group">
-          <label class="white-text"for="item_name">{{category.category_name}} name:</label>
-          <input class="form-input white-text" type="text" id="item_name" name="item_name" />
-        </div>
-        <div class="form-group">
-          <label class="white-text"for="website">{{category.category_name}} website:</label>
-          <input class="form-input white-text" type="text" id="website" name="website" />
-        </div>
-        <div class="form-group hidden">
-          <label class="white-text"for="category_id">category_id:</label>
-          <textarea class="form-input white-text" type="text" id="category_id" name="category_id" value="{{category.id}}">{{category.id}}</textarea>
-        </div>
-        <div class="form-group">
-          <button type="submit" class="btn btn-primary"><i class="material-icons">add</i></button>
-        </div>
-      </form>
-    </div>
-
-
-  </div>
-
+<!-- Modal Trigger -->
+<div class='row left'>
+  <button
+    class='modal-trigger btn waves-effect waves-light hoverable'
+    onclick='toggleModal'
+    data-target='modalComment'
+  >Add Comment
+  <i class='material-icons right'>chat</i>
+  </button>
+</div>
