--- a/views/partials/formPost.handlebars
+++ b/views/partials/formPost.handlebars
@@ -2,7 +2,7 @@
 <div class='row center'>
   <a
     href='#'
-    class='modal-trigger btn-large waves-effect waves-light orange'
+    class='modal-trigger btn-large waves-effect waves-light orange hoverable'
     onclick='toggleModal'
     data-target='modalPost'
   >Create a Post</a>
@@ -25,7 +25,7 @@
           <label for='post_body'>Body:</label>
           <textarea class='' type='text' id='post_body'></textarea>
         </div>
-        <div class='form-group hidden'>
+        <div class='form-group'>
           <label class='white-text' for='user_id'>user_id:</label>
           <input
             class='form-input white-text'
