--- a/views/partials/formPost.handlebars
+++ b/views/partials/formPost.handlebars
@@ -25,7 +25,7 @@
           <label for='post_body'>Body:</label>
           <textarea class='' type='text' id='post_body'></textarea>
         </div>
-        <div class='form-group'>
+        <div class='form-group hidden'>
           <label class='white-text' for='user_id'>user_id:</label>
           <input
             class='form-input white-text'
